--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ h1{ text-align: center; }
 	overflow-y: auto;
 }
 
-.romURL{
+.downloadButton{
 	float: right;
 	width: 5em; height: 5em;
 	margin-left: 1em;
@@ -40,7 +40,7 @@ h1{ text-align: center; }
 .darkBackground{ border-color: transparent; }
 .lightBackground{ background-color: white; }
 
-.romEdit{
+.editButton{
 	float: right;
 	width: 3em; height: 3em;
 	margin-left: 1em;
@@ -51,8 +51,9 @@ h1{ text-align: center; }
 	background-size: contain;
 }
 
-.romTitle{ text-align: left; margin: 0; }
-.romDescription{ margin-top: 1em; }
+.itemTitle{ text-align: left; margin: 0; }
+.itemDescription{ margin-top: 1em; }
+.itemRelease{  }
 
 #pagesButtons{
 	margin-top: 1em;
